# checker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  deny.toml  rustfmt.toml  test-browser.html
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docker/: runtime-linux.Dockerfile  runtime-wasm.Dockerfile
scripts/: package-assets.sh
src/: lib.rs  main.rs
tests/: integration_tests.rs
