[package]
name = "kuack-checker"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Kuack"]
description = "HTTP endpoint performance checker"
repository = "https://github.com/kuack-io/checker"

[[bin]]
name = "kuack-checker"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.5"
web-time = "1.1"

# Browser WASM (wasm32-unknown-unknown)
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Performance", "PerformanceEntry", "PerformanceResourceTiming", "console"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6"

# WASI (wasm32-wasip2 and similar)
[target.'cfg(all(target_family = "wasm", not(target_os = "unknown")))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.42", default-features = false, features = ["macros", "rt", "time"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.42", default-features = false, features = ["macros", "rt", "rt-multi-thread", "time"] }

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
wiremock = "0.6"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)', 'cfg(tarpaulin_include)'] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
